# challenge-cup-overlay

./: .gitignore  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
api/: Cargo.toml
api/src/: main.rs
src/drizzle/: 0000_bored_sphinx.sql
src/drizzle/meta/: 0000_snapshot.json  _journal.json
src/lib/: index.ts  types.ts
src/lib/components/: ScoreBar.svelte  TeamCard.svelte
src/lib/server/: db.ts  schema.ts
src/routes/: +layout.svelte
src/routes/admin/: +page.server.ts  +page.svelte
src/routes/admin/pool/[id]/: +page.server.ts  +page.svelte
src/routes/admin/team/[id]/: +page.server.ts  +page.svelte
src/routes/bracket/: +page.svelte
src/routes/countdown/: +page.svelte
src/routes/credits/: +page.svelte
src/routes/finalists/: +page.server.ts  +page.svelte
src/routes/live/: +page.svelte
src/routes/picksnbans/: +page.svelte
